@@ -8,7 +8,8 @@ Build-Depends: debhelper (>= 8), apache2-threaded-dev, autoconf, automake,
  autotools-dev, doxygen, graphviz, liblog4cpp5-dev, libmemcached-dev,
  libsaml2-dev (>= 2.4), libssl-dev, libtool, libxerces-c-dev,
  libxml-security-c-dev (>= 1.6), libxmltooling-dev (>= 1.4),
- opensaml2-schemas, pkg-config, unixodbc-dev, xmltooling-schemas
+ opensaml2-schemas, pkg-config, unixodbc-dev, xmltooling-schemas,
+ g++-4.4 [armel]
 Standards-Version: 3.9.2
 Homepage: http://shibboleth.internet2.edu/
 Vcs-Git: git://git.debian.org/git/pkg-shibboleth/shibboleth-sp2.git
