@@ -1,5 +1,8 @@
 shibboleth-sp2 (2.4.3+dfsg-2) UNRELEASED; urgency=low
 
+  * Build-depend on g++-4.4 on armel and build with that compiler since
+    g++ 4.5 and 4.6 die with an internal compiler error even with no
+    optimization.  Patch from Peter Green.  (Closes: #623263)
   * Update the upstream download location in debian/copyright.
 
  -- Russ Allbery <rra@debian.org>  Tue, 26 Jul 2011 18:22:28 -0700
